welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	for ( k <- 0 to (nums.length-1 ) )  {
		if (lookingfor) {
			return T(nums.length -1 ) 
		} else return -1

		
		
	}
	}
